# pyri-example-plugin

./: README.md  pyproject.toml  setup.py
src/pyri_example_plugin/: blockly.py  factory.py  sandbox_functions.py  webui_server.py
src/pyri_example_plugin/webui_static/: hello.html
test/: test_blockly.py
test/test_pyri_example_plugin/: test_blockly.py
